--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="sidebar">
-            <div class="dashboard">Dashboard</div>
+            <h1 class="dashboard">Dashboard</h1>
             <div class="side-menu">Home</div>
             <div class="side-menu">Profile</div>
             <div class="side-menu">Messages</div>
@@ -38,17 +38,17 @@
 
         <div class="projects">
             <div class="project">This is an empty container for project information.</div>
-            <div class="project">This is an empty container for project information.</div>
+            <div class="project">This is an empty container for cha muva.</div>
             <div class="project">This is an empty container for project information.</div>
             <div class="project">This is an empty container for project information.</div>
             <div class="project">This is an empty container for project information.</div>
             <div class="project">This is an empty container for project information.</div>
         </div>
         <div class="announcements">
-            <h1> announcements</h1>
-            <div class="maintenance">"Completed website update, ensuring that our online experience remains smooth and secure for you."</div>
-            <div class="new">New projects that involve a lot of thining. Added new sidebar menu for better views.</div>
-            <div class="policy">Updated private Policy</div>
+            <h1> Announcements</h1>
+            <div class="announcement">"Completed website update, ensuring that our online experience remains smooth and secure for you."</div>
+            <div class="announcement">New projects that involve a lot of thining. Added new sidebar menu for better views.</div>
+            <div class="announcement">Updated private Policy</div>
         </div>
     </div>
 </body>
